--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body{
   color: var(--mainDark) !important;
 }
 .text-title {
-  font-family: 'Permanent Marker', cursive;
+  font-family: "Oswald", sans-serif !important;
   letter-spacing: 0.3rem;
   text-transform: uppercase;
 }
@@ -40,4 +40,13 @@ body{
   cursor: pointer;
   font-size: 1.2rem;
   color: var(--mainYellow);
+}
+#cartbtn {
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1.4rem;
+}
+#cartbtn :hover {
+  color: palevioletred;
 }
