--- a/src/App.css
+++ b/src/App.css
@@ -21,14 +21,48 @@ body{
 .text-bright {
   color: var(--lightBlue);
 }
+.myflex {
+  flex-grow: 1;
+}
+.myflex img {
+  border-radius: 5px;
+}
+.myflexx {
+  flex-grow: 2;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  width: 100%;
+}
 
+.bbindx-a {
+  background: palevioletred !important;
+  border-top-left-radius: 0.9rem !important;
+  border-top-right-radius: 0 !important;
+  border-bottom-left-radius: 0.9rem !important;
+  border-bottom-right-radius: 0 !important;
+  border-right: 0 !important;
+  height: 2rem;  
+}
+.bbindx-c {
+  background: palevioletred  !important;
+  border-top-right-radius: 0.9rem !important;
+  border-top-left-radius: 0 !important;
+  border-bottom-right-radius: 0.9rem !important;
+  border-bottom-left-radius: 0 !important;
+  border-left: 0 !important;
+  height: 2rem;
+}
+.bbindx-b {
+  background: #f3f3f3  !important;
+  border-radius: 0 !important;
+}
 .btn-black {
   background: transparent;
   text-transform: capitalize;
   font-size: 0.8rem !important;
   color: var(--mainDark);
-  border-radius: 0 !important;
-  border: 0.1rem solid var(--mainDark) !important;
+  /* border-radius: 0 !important;
+  border: 0.1rem solid var(--mainDark) !important; */
 }
 .btn-black:hover {
   background: var(--mainDark) !important;
@@ -37,7 +71,7 @@ body{
 .cart-icon {
   cursor: pointer;
   font-size: 1.2rem;
-  color: var(--mainYellow);
+  color: #dc3545;
 }
 #cartbtn {
   background: transparent;
@@ -48,18 +82,30 @@ body{
 #cartbtn :hover {
   color: palevioletred;
 }
+.payButton {
+  color: #ffffff !important;
+  font-size: 1.2rem;
+}
+
+/* .paddin {
+  width: 100%;
+  
+} */
+
 .ic {
+  width: 60%;
+  font-size: 0.8rem;
   background: green;
   border-radius: 1.5rem;
 }
 .nic {
+  width: 60%;
+  font-size: 0.8rem;
   border-radius: 1.5rem;
   background: #c74d89e3;
 }
 .cart-btn {
   color: var(--mainWhite);
-  font-size: 1.5rem;
-  
   width: 100%;
 }
 
