--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,12 @@
   --mainWhite:#fff;
   --mainDark:#232528;
   --mainYellow:#ffa400;
+  --accordion-color: #282828;
+  --title-color: #191919;
+  --active-color: #3e86d2;
+  --separator-color: #292c2d;
 }
+
 body{
   font-family: "Oswald", sans-serif !important;
   background: var(--mainWhite) !important;
@@ -197,6 +202,16 @@ button:focus {
   background: palevioletred;
   color: #fff;
   text-align: center;
+  /* FOOTER
+–––––––––
+.page-footer {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  font-size: 1rem;
+  color: var(--black);
+}
+––––––––––––––––––––––––––––––––––––––––– */
 }
 .WithStyles\(ForwardRef\(ExpansionPanelDetails\)\)-root-81{
   background: palevioletred;
@@ -271,12 +286,61 @@ button:focus {
   font-size: 1.5rem;
 }
 
+.myaccordion-body * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.myaccordion .myaccordion-title {
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 1.4rem;
+  font-weight: bold;
+  line-height: normal;
+  padding: 20px 10px;
+  background: var(--title-color);
+  transition: color 0.1s;
+}
+
 @media screen and (max-width:769px) {
   .bbn {
     display:none;
   }  
   .card-img-top {
     height:21rem;
+  }
+  .myaccordion {
+    min-height: 0;  
+  }
+  
+  .myaccordion,
+  .myaccordion li {
+    flex-direction: column;
+  }
+  
+  
+  .myaccordion .myaccordion-heading {
+    transform: none;
+  }
+  
+  .myaccordion .myaccordion-title,
+  .myaccordion .myaccordion-content {
+    padding: 20px;
+  }
+}
+
+@media screen and (min-width:767px) {
+  .myaccordion .myaccordion-heading {
+    display: inline-block;
+    white-space: nowrap;
+    transform-origin: bottom;
+    transform: rotate(-90deg) translate(50%, 50%);
+  }
+  .myaccordion .myaccordion-title {
+    flex-direction: column;
+    width: 70px;
   }
 }
 
